--- a/index.html
+++ b/index.html
@@ -8,53 +8,53 @@
   <body>
     <header class="page-header wrapper">
         <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-        <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+        <a class="status status-header" href="index.html"><img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device"></a>
 
         <div class="navigation">
           <div class="navigation-section">
             <div class="navigation-section-item">
               <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-                <img class="search-icon" src="images/icons-loupe.svg" width="16px" height="16px">
                 <input class="search" placeholder="Поиск по сайту" type="search" name="search">
+                <img class="search-icon" src="images/icons-loupe.svg" width="16px" height="16px">
                 <button class="find-button" type="submit">Найти</button>
               </form>
-              <div class="navigation-top-section-enter">
+              <a href="#" class="navigation-top-section-enter status">
                 <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
-                <a class="navigation-user-link" href="#">Войти</a>
-              </div>
+                <span class="navigation-user-link">Войти</span>
+              </a>
             </div>
 
             <div class="navigation-section-item">
-              <div>
+              <a href="#" class="status">
                 <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
-                <a class="navigation-user-link" href="#">Сравнить</a>
-              </div>
+                <span class="navigation-user-link">Сравнить</span>
+              </a>
 
-              <div class="navigation-section-item-link">
+              <a href="#" class="navigation-section-item-link status">
                 <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
                 <div class="badge">
                    2
                 </div>
-                <a class="navigation-user-link" href="#">Корзина</a>
-              </div>
+                <span class="navigation-user-link">Корзина</span>
+              </a>
             </div>
           </div>
 
           <nav class="navigation-section">
-            <div class="navigation-section-item navigation-section-short">
-              <a class="navigation-link" href="catalog.html">Каталог товаров</a>
+            <a href="catalog.html" class="navigation-section-item navigation-section-short status">
+              <span class="navigation-link">Каталог товаров</span>
               <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
-            </div>
+            </a>
 
             <ul class="navigation-section-item navigation-section-wide">
               <li class="navigation-item">
-                <a class="navigation-link" href="#">Доставка</a>
+                <a class="navigation-link navigation-link-active status" href="#">Доставка</a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link" href="#">Гарантия</a>
+                <a class="navigation-link status" href="#">Гарантия</a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link" href="#">Контакты</a>
+                <a class="navigation-link status" href="#">Контакты</a>
               </li>
             </ul>
           </nav>
@@ -66,9 +66,9 @@
       <section class="slider wrapper">
         <div class="slider-item slider-item-active">
           <div class="slider-img">
-            <img class="arrow arrow-left" src="images/icons-arrow-left.svg" width="20px" height="60px">
+            <img class="arrow arrow-left status" src="images/icons-arrow-left.svg" width="20px" height="60px">
             <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
-            <img class="arrow arrow-right" src="images/icons-arrow-right.svg" width="20px" height="60px">
+            <img class="arrow arrow-right status" src="images/icons-arrow-right.svg" width="20px" height="60px">
           </div>
           <div class="slider-item-section">
             <div class="slider-number">
@@ -78,11 +78,8 @@
             <p class="slider-description text">
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
             </p>
-            <a class="main-button slider-button" href="#">
-              <div class="button-background"></div>
-              <div class="button-title">
-                Подробнее
-              </div>
+            <a class="main-button button slider-button" href="#">
+              Подробнее
             </a>
             <div class="specification">
               <div class="specification-item">
@@ -118,11 +115,8 @@
             <p class="slider-description text">
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
-            <a class="main-button slider-button" href="#">
-              <div class="button-background"></div>
-              <div class="button-title">
-                Подробнее
-              </div>
+            <a class="main-button button slider-button" href="#">
+              Подробнее
             </a>
             <div class="specification">
               <div class="specification-item">
@@ -150,11 +144,8 @@
             <p class="slider-description text">
               Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
             </p>
-            <a class="main-button slider-button" href="#">
-              <div class="button-background"></div>
-              <div class="button-title">
-                Подробнее
-              </div>
+            <a class="main-button button slider-button" href="#">
+              Подробнее
             </a>
             <div class="specification">
               <div class="specification-item">
@@ -185,9 +176,9 @@
           </div>
         </div>
         <div class="slider-dots">
-          <div class="active"></div>
-          <div></div>
-          <div></div>
+          <div class="active status"></div>
+          <div class="status"></div>
+          <div class="status"></div>
         </div>
       </section>
 
@@ -195,37 +186,37 @@
         <h2 class="visually-hidden">Продукты</h2>
         <ul class="category-list">
           <li class="category-card">
-            <a class="category-card-link" href="#">
+            <a class="category-card-link index-status" href="#">
               <img class="category-card-image" src="images/category-vr.png" width="160" height="160" alt="Очки виртуальной реальности">
               <p class="category-card-text">Виртуальная реальность</p>
             </a>
           </li>
           <li class="category-card">
-            <a class="category-card-link" href="#">
+            <a class="category-card-link index-status" href="#">
               <img class="category-card-image" src="images/category-monopods-for-selfie.png" width="160" height="160" alt="Монопод для селфи">
               <p class="category-card-text">Моноподы для селфи</p>
             </a>
           </li>
           <li class="category-card">
-            <a class="category-card-link" href="#">
+            <a class="category-card-link index-status" href="#">
               <img class="category-card-image" src="images/category-action-cameras.png" width="160" height="160" alt="Экшн-камера">
               <p class="category-card-text">Экшн-камеры</p>
             </a>
           </li>
           <li class="category-card">
-            <a class="category-card-link" href="#">
+            <a class="category-card-link index-status" href="#">
               <img class="category-card-image" src="images/category-fitness-bracelets.png" width="160" height="160" alt="Фитнес-браслет">
               <p class="category-card-text">Фитнес-браслеты</p>
             </a>
           </li>
           <li class="category-card">
-            <a class="category-card-link" href="#">
+            <a class="category-card-link index-status" href="#">
               <img class="category-card-image" src="images/category-smart-watch.png" width="160" height="160" alt="Умные часы">
               <p class="category-card-text">Умные часы</p>
             </a>
           </li>
           <li class="category-card">
-            <a class="category-card-link" href="#">
+            <a class="category-card-link index-status" href="#">
               <img class="category-card-image" src="images/category-quadrocopter.png" width="160" height="160" alt="Квадрокоптер">
               <p class="category-card-text">Квадрокоптеры</p>
             </a>
@@ -237,31 +228,19 @@
         <div class="advantage-wrapper wrapper">
           <h2 class="visually-hidden">Преимущества</h2>
           <div class="advantage-list">
-            <button class="advantage-button active" type="button">
-              <div class="advantage-button-title">
-                <span>
-                  Доставка
-                </span>
-                <div class="button-background"></div>
-              </div>
-            </button>
-            <button class="advantage-button" type="button">
-              <div class="advantage-button-title">
-                <span>
-                  Гарантия
-                </span>
-                <div class="button-background"></div>
-              </div>
-            </button>
-            <button class="advantage-button" type="button">
-              <div class="advantage-button-title">
-                <span>
+            <div class="advantage-buttons-wrapper">
+              <button class="advantage-button active" type="button">
+                Доставка
+              </button>
+              <button class="advantage-button button" type="button">
+                Гарантия
+              </button>
+              <button class="advantage-button button" type="button">
                   Кредит
-                </span>
-                <div class="button-background"></div>
-              </div>
-            </button>
+              </button>
+            </div>
           </div>
+
           <div class="advantage-item-wrapper">
             <div class="advantage-item advantage-item-active">
               <div>
@@ -284,7 +263,6 @@
         </div>
       </section>
 
-      <!-- Рассмотрим эту секцию позже -->
       <button class="delivery-section wrapper">
         <div class="delivery-icon-wrapper">
           <img class="delivery-icon" src="images/icons-car.svg" width="47px" height="31px">
@@ -308,11 +286,8 @@
             <li class="delivery-item"><span>СДИК</span></li>
             <li class="delivery-item"><span>ТоксБерри</span></li>
           </ul>
-          <a class="main-button section-contact-button" href="#">
-            <div class="button-background"></div>
-              <div class="button-title">
-                Подробнее о нас
-              </div>
+          <a class="main-button button section-contact-button" href="#">
+            Подробнее о нас
           </a>
         </div>
 
@@ -329,11 +304,8 @@
             <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
           </ul>
-          <a class="main-button contact-us-button" href="#">
-            <div class="button-background"></div>
-              <div class="button-title">
-                Напишите нам
-              </div>
+          <a class="main-button button contact-us-button" href="#">
+            Напишите нам
           </a>
         </div>
       </section>
@@ -365,56 +337,48 @@
 
     <footer class="page-footer">
       <div class="page-footer-wrapper wrapper">
-        <img class="logo-footer" src="images/logo-device-yellow.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
-        <div class="footer-column">
-          <div class="footer-section footer-section-left">
-            <address class="contacts-footer">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
-            <img src="images/icons-line.svg" width="80px" height="7px">
-          </div>
-
-          <div class="footer-section footer-section-center">
-            <div class="page-footer-top">
-              <ul class="navigation-list">
-                <li class="navigation-item">
-                  <a class="navigation-link text-footer" href="#">Доставка</a>
-                </li>
-              <li class="navigation-item">
-                <a class="navigation-link text-footer" href="#">Гарантия</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link text-footer" href="#">Контакты</a>
-              </li>
-              </ul>
-            </div>
-            <div class="page-footer-bottom">
-              <ul class="footer-social-list">
-                <li class="footer-social-item">
-                  <a class="social-button" href="https://t.me/htmlacademy">
-                    <span class="visually-hidden">Telegram</span>
-                    <img src="images/social-networks-telegram.svg" width="14px" height="12px">
-                  </a>
-                </li>
-                <li class="footer-social-item">
-                  <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
-                    <span class="visually-hidden">YouTube</span>
-                    <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
-                  </a>
-                </li>
-                <li class="footer-social-item">
-                  <a class="social-button" href="https://twitter.com/htmlacademy_ru">
-                    <span class="visually-hidden">Twitter</span>
-                    <img src="images/social-networks-twitter.svg" width="15px" height="14px">
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="footer-section footer-section-right">
-            <a class="contacts-footer" href="tel:88128121212">Тел.: +7 (812) 812-12-12</a>
-            <a href="https://htmlacademy.ru/"><img class="autograph" src="images/logo-html-academy.svg" width="115" height="33" alt="Автор HTML-Academy"></a>
-          </div>
+        <a class="status" href="index.html"><img class="logo-footer" src="images/logo-device-yellow.svg" width="145px" height="36px" alt="Логотип интернет магазина Device"></a>
+        <address class="contacts-footer contacts-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
+        <img class="line" src="images/icons-line.svg" width="80px" height="7px">
+        <div class="page-footer-top">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link text-footer" href="#">Доставка</a>
+            </li>
+          <li class="navigation-item">
+            <a class="navigation-link text-footer" href="#">Гарантия</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link text-footer" href="#">Контакты</a>
+          </li>
+          </ul>
         </div>
+        <div class="page-footer-bottom">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="social-button status-social" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Telegram</span>
+                <img src="images/social-networks-telegram.svg" width="14px" height="12px">
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="social-button status-social" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">YouTube</span>
+                <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="social-button status-social" href="https://twitter.com/htmlacademy_ru">
+                <span class="visually-hidden">Twitter</span>
+                <img src="images/social-networks-twitter.svg" width="15px" height="14px">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <a class="contacts-footer contacts-tel" href="tel:88128121212">Тел.: +7 (812) 812-12-12</a>
+        <a class="autograph" href="https://htmlacademy.ru/">
+        </a>
+
       </div>
 
     </footer>
